@@ -1,31 +1,34 @@
 Документация
 ------------
 
+* wwwroot -> root
+* получше реструктуризовать документацию
+* починить ссылку про кластеризацию
 * Добавить про flv publish??
 * Описание задержек, откуда что берется
 
 Фичи
 ----
 
-* отвалился архив в rewrite
-* отвалились rtmp стримы в rewrite
-* проверить mixer
+
+* добавить экспорт логов из веб-интерфейса
+* статистика по архиву: заполнение жесткого диска и карта общей записи
+* messaging связанный с сессиями
 * Другие авторизационные бекенды
 * per-ip session limit
 * global session limit
 * stale authorization cache
 * mpeg2coder
 * mpegts-http старт с keyframe
-* messaging
 * Подумать как отдавать метадату с временем текущего сегмента
 * хранение метадаты в архиве
-* ключи в HLS
+* задизайнить в HLS: внешний поток ключей, drm, что-то ещё
 
 Архив
 -----
 
 * упаковывать MPEG-2
-
+* упаковывать MJPEG
 
 HLS DRM
 -------
