@@ -1,0 +1,6 @@
+#!/bin/sh
+
+yum install -y http://mirror.yandex.ru/epel/6/x86_64/epel-release-6-7.noarch.rpm
+
+yum install -y mock rpm-build
+
